<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">오디오 버그에 오신 것을 환영합니다 %s\n\n서비스를 시작하면 준비가 완료됩니다!\n\n트리거를 구성하기 위해 서비스를 중지합니다.\n긴 진동은 녹음이 시작되었음을 나타냅니다.\n3번의 짧은 진동은 녹음이 중지되었음을 나타냅니다.\n하드웨어 또는 사용자 정의 ROM으로 인해 근접 트리거가 장치에서 작동하지 않을 수 있습니다.\n\n책임감 있게 사용하세요\n귀하의 국가에서는 동의 없이 녹음하는 것이 불법일 수 있습니다.</string>
    <string name="app_name">오디오 버그</string>
    <string name="follow_darken">어둡게 팔로우</string>
    <string name="keep_up_with_recent_developments">최신 개발 사항을 파악하세요.</string>
    <string name="recording_saved_to">녹음이 저장됨\n%s</string>
    <string name="beginning_recording">녹음 시작</string>
    <string name="no_sensor_trigger">센서 트리거 없음</string>
    <string name="trigger_recording_by_shaking">흔들어서 녹화 시작</string>
    <string name="trigger_by_proximity_sensor">근접 센서를 덮어 트리거</string>
    <string name="sourcecode">소스 코드</string>
    <string name="settings">설정</string>
    <string name="start">시작</string>
    <string name="shake_slider_threshold">SOFT 쉐이크 임계값 (%s)   폭력적인</string>
    <string name="shake_slider_count">덜 흔들어 (%s) 더 많이</string>
    <string name="shake_slider_timeout">흔들기 사이의 시간 단축 (%s) 더 길어짐</string>
    <string name="proximity_slider_taps">탭 수 감소(%s) 더 증가</string>
    <string name="proximity_slider_timeout">탭 간 지연 감소(%s) 더 증가</string>
    <string name="open_source_summary">이 앱은 오픈 소스입니다.</string>
    <string name="location_summary">생성된 녹음을 저장할 위치입니다. 우리가 거기에 쓸 수 있는지 확인하세요.</string>
    <string name="location_title">저장 위치</string>
    <string name="service_notification_title">서비스 알림</string>
    <string name="service_notification_summary">서비스가 활성화되면 알림을 표시합니다. 하지만 반드시 녹음하는 것은 아닙니다</string>
    <string name="recording_notification_title">녹음 알림</string>
    <string name="recording_notifcation_summary">녹화 중 알림 표시</string>
    <string name="wakelock_title">웨이크락을 사용하세요</string>
    <string name="wakelock_summary">화면이 꺼져 있는 동안에도 앱이 활성 상태를 유지할 수 있도록 합니다.</string>
    <string name="start_recording">녹음 시작</string>
    <string name="stop_to_config">구성을 변경하려면 서비스를 중지하세요.</string>
    <string name="info">정보</string>
    <string name="privacy_summary">이 앱은 사용자 데이터를 수집하거나 공유하지 않습니다.</string>
    <string name="privacy_title">개인정보 보호정책</string>
    <string name="action_stop_recording">녹음 중지</string>
    <string name="action_start_recording">녹음 시작</string>
</resources>
